saturn-program-macros/tests/compile_fail/btc_tx_cfg_wrong_literal_types.stderr
error: max_inputs_to_sign must be an integer literal
  --> tests/compile_fail/btc_tx_cfg_wrong_literal_types.rs:11:37
   |
11 |     btc_tx_cfg(max_inputs_to_sign = "four", max_modified_accounts = true)
   |                                     ^^^^^^
